--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.11",
     "@prisma/client": "^5.7.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
