--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.11",
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
