--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.11",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.0",
+    "bcrypt-ts": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
