--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://devigor:jC5pegc7cDYyCqS5@cluster0.hnmyhpb.mongodb.net/synthmovies?retryWrites=true&w=majority"
+
+SECRET=qualquercoisaanosoitenta
