feat: Finish new movie form

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mongodb+srv://devigor:jC5pegc7cDYyCqS5@cluster0.hnmyhpb.mongodb.net/synthmovies?retryWrites=true&w=majority"
 NEXTAUTH_URL="http://localhost:3000/"
 SECRET=qualquercoisaanosoitenta
+EDGE_STORE_ACCESS_KEY=hu8a1O5c8evt6vrszyHkpAc12KHvVgFj
+EDGE_STORE_SECRET_KEY=lqt9kuN09XZP6sv0s9LpWE8B97bsE3pJiPX1id5OhhQWnS8A
