--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
