--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.299.0",
+    "moment": "^2.29.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
