fix: Try to fix route bug

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://devigor:jC5pegc7cDYyCqS5@cluster0.hnmyhpb.mongodb.net/synthmovies?retryWrites=true&w=majority"
-NEXTAUTH_URL=http://localhost:3000/home
-HOST_URL=http://localhost:3000/home
+NEXTAUTH_URL=http://localhost:3000/
+HOST_URL=http://localhost:3000/
 NEXTAUTH_SECRET='qwdiwqjiodqwjouidqwjhouiwqdjhodqw'
 JWT_SECRET=qwidjiqwjdijqwdolqwjdiojqwoidqw
 EDGE_STORE_ACCESS_KEY=hu8a1O5c8evt6vrszyHkpAc12KHvVgFj
